fix: ImageWrapperの型エラー回避のため、class propsをclassNameにした(#158)

--- a/src/content/posts/2018/2018-09-09-cleaning-duty-2.mdx
+++ b/src/content/posts/2018/2018-09-09-cleaning-duty-2.mdx
@@ -105,7 +105,7 @@ function random(length) {
 
 さすがに3回連続はキレられますね(笑)
 
-<ImageWrapper class="w-[70%]" src="screenshots/2018/cleaning-duty/notification-1.png" alt="Slack投稿結果" />
+<ImageWrapper className="w-[70%]" src="screenshots/2018/cleaning-duty/notification-1.png" alt="Slack投稿結果" />
 
 
 ## リファクタ
