--- a/src/content/posts/2019/2019-06-03-laravel-laradock.mdx
+++ b/src/content/posts/2019/2019-06-03-laravel-laradock.mdx
@@ -154,7 +154,7 @@ composer create-project --prefer-dist laravel/laravel ./
 3. 動作確認
 [http://localhost](http://localhost/)にアクセス
 以下の Laravel のトップページが表示されれば OK
-<ImageWrapper class="w-[50%]" src="screenshots/2019/laravel-laradock/laravel.png" alt="Laravelトップ画面" />
+<ImageWrapper className="w-[50%]" src="screenshots/2019/laravel-laradock/laravel.png" alt="Laravelトップ画面" />
 
 ### MySQL の接続設定
 1. Laravel プロジェクトの`.env`を修正
