--- a/src/content/posts/2019/2019-07-06-google-analytics.mdx
+++ b/src/content/posts/2019/2019-07-06-google-analytics.mdx
@@ -65,7 +65,7 @@ Google が提供するアクセス解析ツール。
 自分の場合、ホスティングには Netlify を使用しているため、こちらで設定しました。
 `netlify.toml`というファイルを使用しても設定できるそうなのですが、今回は手動で設定。
 Setting → Build&Deploy → Environment から設定画面に行けます。
-<ImageWrapper class="w-[70%]" src="screenshots/2019/google-analytics/netlify-environment.png" alt="Netlify環境変数設定画面" />
+<ImageWrapper className="w-[70%]" src="screenshots/2019/google-analytics/netlify-environment.png" alt="Netlify環境変数設定画面" />
 
 #### プライバシーポリシー
 Google Analytics を利用する際は、プライバシーポリシーを記載したページの用意が必要になります。
