--- a/src/content/posts/2019/2019-08-14-docker-rails.mdx
+++ b/src/content/posts/2019/2019-08-14-docker-rails.mdx
@@ -159,7 +159,7 @@ Created database 'myapp_test'
 localhost:3000
 ```
 以下のような画面が表示されればOKです。
-<ImageWrapper class="w-[70%]" src="screenshots/2019/docker-rails/rails.png" alt="Railsトップ画面" />
+<ImageWrapper className="w-[70%]" src="screenshots/2019/docker-rails/rails.png" alt="Railsトップ画面" />
 
 ## 遭遇したエラー
 ### ビルドコンテキスト外のファイルを COPY しようとしてエラー
