--- a/src/content/posts/2019/2019-10-09-wsl-expo-network.mdx
+++ b/src/content/posts/2019/2019-10-09-wsl-expo-network.mdx
@@ -21,7 +21,7 @@ WSL で`expo start`した後、20～30分後くらいにネットワークが繋
 
 どこのページにアクセスしようとしても以下のようにエラーが表示され、アクセスできません。
 ここに表示されている Windows ネットワーク診断ツールを実行してみても、異常がないといわれます。
-<ImageWrapper class="w-[60%]" src="screenshots/2019/wsl-expo-network/network-error.png" alt="ネット上のページにアクセスできないエラー画面" />
+<ImageWrapper className="w-[60%]" src="screenshots/2019/wsl-expo-network/network-error.png" alt="ネット上のページにアクセスできないエラー画面" />
 
 
 CONNECTION を Tunnel にした時も、`expo start --offline`とオプションをつけた時も、同様の現象が起きます。
@@ -42,10 +42,10 @@ CONNECTION を Tunnel にした時も、`expo start --offline`とオプション
 > This should restart the WSL service, normalizing the network.
 
 1. Windows + R でファイル名を指定して実行の画面を出し、`services.msc`と入力してOK
-<ImageWrapper class="w-[80%]" src="screenshots/2019/wsl-expo-network/file-run.png" alt="ファイル名を指定して実行画面" />
+<ImageWrapper className="w-[80%]" src="screenshots/2019/wsl-expo-network/file-run.png" alt="ファイル名を指定して実行画面" />
 
 2. 一覧から LxssManager を見つける
-<ImageWrapper class="w-[80%]" src="screenshots/2019/wsl-expo-network/lxss-manager.png" alt="サービスの一覧画面" />
+<ImageWrapper className="w-[80%]" src="screenshots/2019/wsl-expo-network/lxss-manager.png" alt="サービスの一覧画面" />
 
 3. 右クリックを押し、再起動
 
