--- a/src/content/posts/2019/2019-10-24-docker-react-swagger.mdx
+++ b/src/content/posts/2019/2019-10-24-docker-react-swagger.mdx
@@ -570,7 +570,7 @@ docker-compose up -d --build
 ### ブラウザでアクセス
 `localhost:3000`にアクセスして、以下のような画面になればOKです。
 ちなみにホットリロードを有効化にしているため、コードを変更して保存すると即座に反映されます。
-<ImageWrapper class="w-[70%]" src="gifs/2019/docker-react-swagger/react-app.gif" alt="Reactアプリ トップ画面" />
+<ImageWrapper className="w-[70%]" src="gifs/2019/docker-react-swagger/react-app.gif" alt="Reactアプリ トップ画面" />
 
 ## Swagger
 ### Swagger Editor
@@ -668,7 +668,7 @@ export default App;
 
 `localhost:3000`にアクセスし、API リクエストのボタンを押すと axios のリクエストが実行されます。
 コンソールに出力しているので、Developer Tools で確認すると以下のようにデータが取得できているのが確認できるはず。
-<ImageWrapper class="w-[80%]" src="screenshots/2019/docker-react-swagger/swagger-api-axios.png" alt="Swaggerにaxiosでアクセスしてコンソールに出力した画面" />
+<ImageWrapper className="w-[80%]" src="screenshots/2019/docker-react-swagger/swagger-api-axios.png" alt="Swaggerにaxiosでアクセスしてコンソールに出力した画面" />
 
 ## その他必要なもの
 使用しているエディタに React に関する拡張を導入するとより開発しやすくなります。
