--- a/src/content/posts/2019/2019-11-10-jekyll-toc.mdx
+++ b/src/content/posts/2019/2019-11-10-jekyll-toc.mdx
@@ -134,7 +134,7 @@ kramdown:
 
 これらで生成された目次が以下のようになります（前回の記事の例）
 ↓
-<ImageWrapper class="w-[80%]" src="screenshots/2019/jekyll-toc/toc.png" alt="kramdownの機能で生成した目次の例" />
+<ImageWrapper className="w-[80%]" src="screenshots/2019/jekyll-toc/toc.png" alt="kramdownの機能で生成した目次の例" />
 
 これでいくらか記事が見やすくなりましたね。
 これからもこういったブログ改善をやっていきますー。
