--- a/src/content/posts/2019/2019-11-30-hp-repair.mdx
+++ b/src/content/posts/2019/2019-11-30-hp-repair.mdx
@@ -16,8 +16,8 @@ import OG from '@/components/OG.astro'
 
 ## 問題の発覚
 ある休日にいつものようにPCを起動したところ、ディスプレイ上部を中心に傷が入っていることに気づきました。
-<ImageWrapper class="w-[80%]" src="screenshots/2019/hp-repair/pc-wound1.png" alt="個人PC ディスプレイ上部の傷" />
-<ImageWrapper class="w-[80%]" src="screenshots/2019/hp-repair/pc-wound2.png" alt="個人PC ディスプレイ左下の傷" />
+<ImageWrapper className="w-[80%]" src="screenshots/2019/hp-repair/pc-wound1.png" alt="個人PC ディスプレイ上部の傷" />
+<ImageWrapper className="w-[80%]" src="screenshots/2019/hp-repair/pc-wound2.png" alt="個人PC ディスプレイ左下の傷" />
 
 数日前に PC を使用していた時はなかった傷で、特に傷をつけた心当たりもなく、なぜできた傷なのかがよくわかりませんでした。
 
