--- a/src/content/posts/2019/2019-12-18-react-basics.mdx
+++ b/src/content/posts/2019/2019-12-18-react-basics.mdx
@@ -848,7 +848,7 @@ React において、以下のようなライフサイクルがあります。
 これらは、デフォルトではクラスコンポーネントのみ使用できるようになっています。
 
 ライフサイクルの流れ図
-<ImageWrapper class="w-[80%]" src="screenshots/2019/react-basics/react-lifecycle.png" alt="Reactコンポーネントのライフサイクル図" />
+<ImageWrapper className="w-[80%]" src="screenshots/2019/react-basics/react-lifecycle.png" alt="Reactコンポーネントのライフサイクル図" />
 
 <OG url="http://projects.wojtekmaj.pl/react-lifecycle-methods-diagram" />
 <OG url="https://github.com/wojtekmaj/react-lifecycle-methods-diagram" />
