--- a/src/content/posts/2020/2020-01-13-docusaurus-ver-2.mdx
+++ b/src/content/posts/2020/2020-01-13-docusaurus-ver-2.mdx
@@ -352,7 +352,7 @@ title: Create a Blog Post
 ```
 
 画面側
-<ImageWrapper class="w-[60%]" src="screenshots/2020/docusaurus-ver-2/sidebar.png" alt="サイドバー" />
+<ImageWrapper className="w-[60%]" src="screenshots/2020/docusaurus-ver-2/sidebar.png" alt="サイドバー" />
 
 階層構造にしたい場合は、以下のように書けば OK。
 
@@ -373,7 +373,7 @@ module.exports = {
 ```
 
 画面側
-<ImageWrapper class="w-[50%]" src="screenshots/2020/docusaurus-ver-2/sidebar-subcategory.png" alt="階層構造にしたサイドバー" />
+<ImageWrapper className="w-[50%]" src="screenshots/2020/docusaurus-ver-2/sidebar-subcategory.png" alt="階層構造にしたサイドバー" />
 
 ### フッター
 docusaurus.config.js の themeConfig のなかに設定があります。
@@ -497,7 +497,7 @@ docs
 - [Netlifyでブログをデプロイ](develop/2019/02/10/netlify-deploy)
 
 ビルド・デプロイの設定例
-<ImageWrapper class="w-[80%]" src="screenshots/2020/docusaurus-ver-2/docusaurus-netlify.png" alt="Netlifyのビルド設定" />
+<ImageWrapper className="w-[80%]" src="screenshots/2020/docusaurus-ver-2/docusaurus-netlify.png" alt="Netlifyのビルド設定" />
 
 これでうまくいっていればデプロイされて、サイトとして閲覧できるようになれるはずです。
 
