--- a/src/content/posts/2020/2020-05-03-docusaurus-ver-2-gtag.mdx
+++ b/src/content/posts/2020/2020-05-03-docusaurus-ver-2-gtag.mdx
@@ -146,7 +146,7 @@ Google Analytics を利用する際は、プライバシーポリシーを記載
 #### サイトを Google Search Console に登録
 - すでに他サイト等で導入したことがある場合
 管理画面の左上のプロパティ（URL など）を選択して「プロパティの追加」から。
-<ImageWrapper class="w-[60%]" src="screenshots/2020/docusaurus-ver-2-gtag/add-google-search-console.png" alt="Google Search Consoleのプロパティ選択画面" />
+<ImageWrapper className="w-[60%]" src="screenshots/2020/docusaurus-ver-2-gtag/add-google-search-console.png" alt="Google Search Consoleのプロパティ選択画面" />
 
 - 新規登録の場合
 [Google Search Console](https://search.google.com/search-console/about?hl=ja)にアクセスして、「今すぐ開始」から。
