--- a/src/content/posts/2021/2021-03-21-laravel-react-query-auth.mdx
+++ b/src/content/posts/2021/2021-03-21-laravel-react-query-auth.mdx
@@ -916,7 +916,7 @@ const LoginAlert: FC<Props> = ({ statusCode }) => (
 export default LoginAlert;
 ```
 ちなみにこういうやつです。
-<ImageWrapper class="w-[40%]" src="screenshots/2021/laravel-react-query-auth/login-alert.png" alt="ログイン画面でのアラート表示画像" />
+<ImageWrapper className="w-[40%]" src="screenshots/2021/laravel-react-query-auth/login-alert.png" alt="ログイン画面でのアラート表示画像" />
 
 ### ログイン画面
 #### Container Component
