--- a/src/content/posts/2021/2021-05-31-buildable-introduction.mdx
+++ b/src/content/posts/2021/2021-05-31-buildable-introduction.mdx
@@ -105,7 +105,7 @@ Clubhouse なんかと同じ感じでしょうか。
 
 ### 料金プラン
 スクショ撮ると大きくなってしまいましたが、執筆時点でこんな感じになっていました。
-<ImageWrapper class="w-[70%]" src="screenshots/2021/buildable-introduction/pricing.png" alt="Buildable - 料金プラン画像" />
+<ImageWrapper className="w-[70%]" src="screenshots/2021/buildable-introduction/pricing.png" alt="Buildable - 料金プラン画像" />
 
 ## Buildable における概念
 ※これ以降、記述する仕様は執筆時点の仕様であることに注意です。
