--- a/src/content/posts/2021/2021-12-30-looking-back-2021-tech.mdx
+++ b/src/content/posts/2021/2021-12-30-looking-back-2021-tech.mdx
@@ -165,7 +165,7 @@ Next.js の勉強はできたのと、リニューアルする上での移行ラ
 
 ちなみに Zenn からいただいた振り返りはこんな感じでした。
 （12/23までなので、devChallenges の記事は含まれてません）
-<ImageWrapper class="w-[70%]" src="screenshots/2021/looking-back-2021-tech/zenn-recap.png" alt="Zenn 2021 Recap - 2021年の活動振り返りデータ - 211,651字の執筆、9記事、60,096ビュー、572Likes、3個のサポートバッジ" />
+<ImageWrapper className="w-[70%]" src="screenshots/2021/looking-back-2021-tech/zenn-recap.png" alt="Zenn 2021 Recap - 2021年の活動振り返りデータ - 211,651字の執筆、9記事、60,096ビュー、572Likes、3個のサポートバッジ" />
 
 やっぱり MUI v5 記事が伸びてましたね。
 ああいった新機能まとめみたいな記事は、やはり需要があるんだなぁと。
