--- a/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
+++ b/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
@@ -32,7 +32,7 @@ import OG from "@/components/OG.astro"
 引用の通り、この資格はレベル1と2が存在し、以下のように出題範囲が異なります。
 
 公式より
-<ImageWrapper class="w-[80%]" src="screenshots/2022/html-professional-level1/html-professional-range.png" alt="HTML5プロフェッショナル認定試験 レベルごとの出題範囲" />
+<ImageWrapper className="w-[80%]" src="screenshots/2022/html-professional-level1/html-professional-range.png" alt="HTML5プロフェッショナル認定試験 レベルごとの出題範囲" />
 
 > **HTML/HTML5 マークアップ**
 > HTML5 に関するタグの用途、構造の組み立て方に関する技術
