--- a/src/content/posts/2023/2023-12-31-looking-back-2023-tech.mdx
+++ b/src/content/posts/2023/2023-12-31-looking-back-2023-tech.mdx
@@ -143,7 +143,7 @@ GitHub 側の9月より前の活動は重複カウントとみなしてカウン
 今年 Zenn からいただいた振り返りはこんな感じでした。
 （12/20までのものです）
 
-<ImageWrapper class="w-[70%]" src="screenshots/2023/looking-back-2023-tech/zenn-recap.png" alt="Zenn 2023 Recap - 2023年の活動振り返りデータ - 64,912字の執筆、6記事、1スクラップ、63,246ビュー、402Likes" />
+<ImageWrapper className="w-[70%]" src="screenshots/2023/looking-back-2023-tech/zenn-recap.png" alt="Zenn 2023 Recap - 2023年の活動振り返りデータ - 64,912字の執筆、6記事、1スクラップ、63,246ビュー、402Likes" />
 
 やはり文字数は少なめ（昨年は13万文字くらい）
 
