--- a/src/content/posts/2018/2018-05-27-first.mdx
+++ b/src/content/posts/2018/2018-05-27-first.mdx
@@ -15,7 +15,7 @@ tags: ["ブログ", "Jekyll"]
 import ImageWrapper from "@/components/ImageWrapper.astro"
 
 ## それにしても
-<ImageWrapper class="w-[60%]" src="screenshots/2018/first/jekyll-logo.png" alt="Jekyllのロゴ" />
+<ImageWrapper className="w-[60%]" src="screenshots/2018/first/jekyll-logo.png" alt="Jekyllのロゴ" />
 
 jekyll のロゴが怪しげでいい感じ。
 
