--- a/src/content/posts/2019/2019-09-26-wsl-develop.mdx
+++ b/src/content/posts/2019/2019-09-26-wsl-develop.mdx
@@ -36,7 +36,7 @@ WSL2 の良さはあるでしょうが、どうも WSL2 → Windows のファイ
 2. 下部の方にある関連設定の「プログラムと機能」を選択
 3. 左メニューの「Windows の機能の有効化または無効化」を選択
 4. 機能一覧の中から「Linux 用 Windows サブシステム」にチェックをつけて「OK」
-<ImageWrapper class="w-[60%]" src="screenshots/2019/wsl-develop/enable-wsl.png" alt="Windowsの機能一覧" />
+<ImageWrapper className="w-[60%]" src="screenshots/2019/wsl-develop/enable-wsl.png" alt="Windowsの機能一覧" />
 
 5. 設定の変更が行われた後、Windows を再起動するよう促されるので、再起動する
 
