--- a/src/content/posts/2020/2020-03-01-github-actions-react.mdx
+++ b/src/content/posts/2020/2020-03-01-github-actions-react.mdx
@@ -539,16 +539,16 @@ React アプリが問題なく表示されているでしょうか？
 通知の内容は以下のような感じになります。
 
 成功
-<ImageWrapper class="w-[80%]" src="screenshots/2020/github-actions-react/github-actions-slack-success.png" alt="ワークフロー成功時のSlack通知" />
+<ImageWrapper className="w-[80%]" src="screenshots/2020/github-actions-react/github-actions-slack-success.png" alt="ワークフロー成功時のSlack通知" />
 
 キャンセル
-<ImageWrapper class="w-[80%]" src="screenshots/2020/github-actions-react/github-actions-slack-canceled.png" alt="ワークフローキャンセル時のSlack通知" />
+<ImageWrapper className="w-[80%]" src="screenshots/2020/github-actions-react/github-actions-slack-canceled.png" alt="ワークフローキャンセル時のSlack通知" />
 
 失敗
-<ImageWrapper class="w-[80%]" src="screenshots/2020/github-actions-react/github-actions-slack-failed.png" alt="ワークフロー失敗時のSlack通知" />
+<ImageWrapper className="w-[80%]" src="screenshots/2020/github-actions-react/github-actions-slack-failed.png" alt="ワークフロー失敗時のSlack通知" />
 
 また、プルリクを出した時、そのリクエスト元ブランチのワークフロー実行状況が表示されるようになります。
-<ImageWrapper class="w-[80%]" src="screenshots/2020/github-actions-react/pull-request.png" alt="ワークフロー実行ブランチでのプルリクエスト" />
+<ImageWrapper className="w-[80%]" src="screenshots/2020/github-actions-react/pull-request.png" alt="ワークフロー実行ブランチでのプルリクエスト" />
 
 ## ワークフロー定義ファイルの簡単な解説
 <OG url="https://docs.github.com/en/actions/reference/workflow-syntax-for-github-actions" />
