--- a/src/content/posts/2020/2020-03-07-jekyll-pagination-v2.mdx
+++ b/src/content/posts/2020/2020-03-07-jekyll-pagination-v2.mdx
@@ -242,7 +242,7 @@ layout: page
 するとカテゴリーページのページネーションを有効にしたことで、サイドバーのリンクが以下のようになってしまいました。
 ページネーションの各ページまでリンクに出てしまっています。
 
-<ImageWrapper class="w-[50%]" src="screenshots/2020/jekyll-pagination-v2/category-link.png" alt="サイドバーのカテゴリーページへのリンク" />
+<ImageWrapper className="w-[50%]" src="screenshots/2020/jekyll-pagination-v2/category-link.png" alt="サイドバーのカテゴリーページへのリンク" />
 
 なので、_includes/category-links.html ファイルを新たに作成して、以下のような内容で上書きするようにしました。
 これでページネーションの各ページが出なくなります。
