--- a/src/content/posts/2020/2020-06-06-react-firebase-deploy.mdx
+++ b/src/content/posts/2020/2020-06-06-react-firebase-deploy.mdx
@@ -27,31 +27,31 @@ import OG from "@/components/OG.astro"
 1. Firebase へアクセス
 
 2. 「使ってみる」「プロジェクトを作成」を選択
-<ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase.png" alt="Firebase トップ画面" />
+<ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase.png" alt="Firebase トップ画面" />
 
 3. プロジェクトの作成
     - プロジェクト名を入力 + 利用規約にチェック して「続行」
-    <ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-project-name.png" alt="Firebaseプロジェクト プロジェクト名入力画面" />
+    <ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-project-name.png" alt="Firebaseプロジェクト プロジェクト名入力画面" />
     - Google Analytics を有効にして「続行」（※今回は有効にしていますが任意）
-    <ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-ga.png" alt="Firebaseプロジェクト Google Analytics設定画面" />
+    <ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-ga.png" alt="Firebaseプロジェクト Google Analytics設定画面" />
     - 連携する Google Analytics アカウントを選択（もしくは新規作成）して「プロジェクトを作成」
-    <ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-ga-account.png" alt="Firebaseプロジェクト Google Analytics連携設定画面" />
+    <ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-ga-account.png" alt="Firebaseプロジェクト Google Analytics連携設定画面" />
 
 少し時間がかかりますが、これでプロジェクトが作成されます。
 
 ### アプリを追加
 1. プロジェクトトップから、追加するアプリのプラットフォームの中から「ウェブ」を選択
-<ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-project-top.png" alt="Firebaseプロジェクト トップ画面" />
+<ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-project-top.png" alt="Firebaseプロジェクト トップ画面" />
 
 2. ウェブアプリに Firebase を追加
     - アプリのニックネームを入力 + Firebase Hosting 設定を有効化 して「アプリを登録」
-    <ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-app-add.png" alt="Firebaseアプリ追加 基本設定画面" />
+    <ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-app-add.png" alt="Firebaseアプリ追加 基本設定画面" />
     - Firebase SDK を予約済み URL から使用する場合は、スクリプトを控えておき「次へ」（※予約済み URL については[こちら](#firebase-sdk-の導入)も参照）
-    <ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-app-sdk.png" alt="Firebaseアプリ追加 SDKスクリプト案内画面" />
+    <ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-app-sdk.png" alt="Firebaseアプリ追加 SDKスクリプト案内画面" />
     - Firebase CLI のインストール方法を確認して「次へ」
-    <ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-app-cli-install.png" alt="Firebaseアプリ追加 CLIインストール案内画面" />
+    <ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-app-cli-install.png" alt="Firebaseアプリ追加 CLIインストール案内画面" />
     - Firebase Hosting へのデプロイ方法を確認して「コンソールに進む」
-    <ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-app-hosting-deploy.png" alt="Firebaseアプリ追加 デプロイ案内画面" />
+    <ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-app-hosting-deploy.png" alt="Firebaseアプリ追加 デプロイ案内画面" />
 
 これで Firebase プロジェクトにウェブアプリが追加されました。
 
@@ -89,7 +89,7 @@ yarn add firebase
 
 #### `.env`を作成
 設定値は Firebase SDK Snippet の「構成」から確認できます。
-<ImageWrapper class="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-sdk.png" alt="Firebase SDK Snippet 構成情報画面" />
+<ImageWrapper className="w-[80%]" src="screenshots/2020/react-firebase-deploy/firebase-sdk.png" alt="Firebase SDK Snippet 構成情報画面" />
 
 `.env`の例.
 
@@ -189,14 +189,14 @@ Waiting for authentication...
 認証のための URL が表示されるので、ブラウザでアクセス（Docker を使用しない場合は、恐らく自動でブラウザが開きます）
 
 内容を確認して「許可」
-<ImageWrapper class="w-[60%]" src="screenshots/2020/react-firebase-deploy/firebase-oauth.png" alt="Firebase Googleアカウント認証確認画面" />
+<ImageWrapper className="w-[60%]" src="screenshots/2020/react-firebase-deploy/firebase-oauth.png" alt="Firebase Googleアカウント認証確認画面" />
 
 ```
 ✔  Success! Logged in as XXX@gmail.com
 ```
 無事に認証できると CLI 側はこの表示が出ます。
 また、ブラウザ側では以下のような表示が出ます。
-<ImageWrapper class="w-[60%]" src="screenshots/2020/react-firebase-deploy/firebase-oauth-complete.png" alt="Firebase認証完了画面" />
+<ImageWrapper className="w-[60%]" src="screenshots/2020/react-firebase-deploy/firebase-oauth-complete.png" alt="Firebase認証完了画面" />
 
 #### 連携・初期化処理
 ```bash
