--- a/src/content/posts/2020/2020-09-20-web1week-2.mdx
+++ b/src/content/posts/2020/2020-09-20-web1week-2.mdx
@@ -42,7 +42,7 @@ import OG from "@/components/OG.astro"
 計算結果が一番「2」に近い式をあてるゲームを作りました。
 一応、スマホでも遊べます。
 
-<ImageWrapper class="w-[60%]" src="gifs/2020/web1week-2/close-to-2-overview.gif" alt="ゲームのプレイ画面GIF" />
+<ImageWrapper className="w-[60%]" src="gifs/2020/web1week-2/close-to-2-overview.gif" alt="ゲームのプレイ画面GIF" />
 
 <OG url="https://crieit.net/boards/web1week-202009/Close-to-2" />
 イベントボードへの投稿から引用。
