post fix: HTMLプロフェッショナルレベル1記事に、記事が紹介されました記事のリンクを追記(#166)

--- a/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
+++ b/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
@@ -2,7 +2,7 @@
 title: "HTML5プロフェッショナル認定試験 レベル1(ver2.5)に合格したけど、めっちゃギリギリだった話"
 description: "HTMLプロフェッショナル認定試験 レベル1(ver2.5)の受験レポート"
 pubDate: "2022-06-11"
-updatedDate: "2023-11-25"
+updatedDate: "2024-03-30"
 category: "qualification"
 tags: ["HTML", "CSS"]
 ---
@@ -178,6 +178,10 @@ ver2.5 の問題集はまだ出版されてなかったので、ver2.0 の問題
 ちなみにこの試験はオンライン試験もできるので、自宅受験の方が緊張せずにすむかも？
 自分の場合は、自習室のような部屋が自宅になかったので、テストセンターまで行って受験してきたのでした。
 
+## 当記事がメディアサイト様で紹介されました（2024/03/30 追記）
+レバレジーズ株式会社様が運営している freelance hub というメディアサイトで、当ブログの記事が紹介されました！
+
+詳細は[HTMLプロフェッショナル認定試験 レベル1受験レポート記事が、freelance hubで紹介されました](/posts/2024-03-30-freelance-hub-introduced-html-level1)を参照ください。
 
 ---
 今回は簡易的な受験レポートをお届けしました。
