post fix: 試験名の表記ゆれを修正(#166)

--- a/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
+++ b/src/content/posts/2022/2022-06-11-html-professional-level1.mdx
@@ -181,7 +181,7 @@ ver2.5 の問題集はまだ出版されてなかったので、ver2.0 の問題
 ## 当記事がメディアサイト様で紹介されました（2024/03/30 追記）
 レバレジーズ株式会社様が運営している freelance hub というメディアサイトで、当ブログの記事が紹介されました！
 
-詳細は[HTMLプロフェッショナル認定試験 レベル1受験レポート記事が、freelance hubで紹介されました](/posts/2024-03-30-freelance-hub-introduced-html-level1)を参照ください。
+詳細は[HTML5プロフェッショナル認定試験 レベル1受験レポート記事が、freelance hubで紹介されました](/posts/2024-03-30-freelance-hub-introduced-html-level1)を参照ください。
 
 ---
 今回は簡易的な受験レポートをお届けしました。
