--- a/src/content/posts/2024/2024-03-30-freelance-hub-introduced-html-level1.mdx
+++ b/src/content/posts/2024/2024-03-30-freelance-hub-introduced-html-level1.mdx
@@ -1,6 +1,6 @@
 ---
-title: "HTMLプロフェッショナル認定試験 レベル1受験レポート記事が、freelance hubで紹介されました"
-description: "HTMLプロフェッショナル認定試験 レベル1受験レポート記事が、レバレジーズ株式会社様が運営するfreelance hubで紹介されたので感想などをつぶやいてみました"
+title: "HTML5プロフェッショナル認定試験 レベル1受験レポート記事が、freelance hubで紹介されました"
+description: "HTML5プロフェッショナル認定試験 レベル1受験レポート記事が、レバレジーズ株式会社様が運営するfreelance hubで紹介されたので感想などをつぶやいてみました"
 pubDate: "2024-03-30"
 updatedDate: "2024-03-30"
 category: "free"
@@ -17,7 +17,7 @@ import OG from "@/components/OG.astro"
 
 <OG url="https://freelance-hub.jp/column/detail/315/" />
 
-自分は以前、HTML プロフェッショナル認定試験レベル1受験のレポート記事を投稿しておりまして。
+自分は以前、HTML5プロフェッショナル認定試験レベル1受験のレポート記事を投稿しておりまして。
 -> [HTML5プロフェッショナル認定試験 レベル1(ver2.5)に合格したけど、めっちゃギリギリだった話](/posts/2022-06-11-html-professional-level1)
 
 「フロントエンドエンジニアに役に立つ資格とは？資格とその勉強方法をチェックしよう！」という題材でいくつか受験レポート記事が紹介される形になっており。その1つとして上記当ブログの記事を紹介いただいたのでした。
