post fix: freelancehubで紹介されました記事に、案件一覧とお役立ちコンテンツのリンク追記(#169)

--- a/src/content/posts/2024/2024-03-30-freelance-hub-introduced-html-level1.mdx
+++ b/src/content/posts/2024/2024-03-30-freelance-hub-introduced-html-level1.mdx
@@ -42,3 +42,5 @@ import OG from "@/components/OG.astro"
 今回は初めてメディアサイト様に紹介いただいた話の記事でした。
 
 [freelance hub](https://freelance-hub.jp/) では主にフリーランスのエンジニア・クリエイター向けの案件情報を掲載されているほか、お役立ちコンテンツ情報を発信されているので、気になる方はぜひチェックされてみてください～。
+- [案件一覧](https://freelance-hub.jp/project/)
+- [お役立ちコンテンツ](https://freelance-hub.jp/column/)
