post fix: デブサミ2024記事にCygamesさんの資料と記事を追加(#171)

--- a/src/content/posts/2024/2024-02-17-developers-summit-2024.mdx
+++ b/src/content/posts/2024/2024-02-17-developers-summit-2024.mdx
@@ -2,7 +2,7 @@
 title: "Developers Summit 2024 公開資料・Xアカウントリンクまとめ"
 description: "デブサミ2024の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2024-02-17"
-updatedDate: "2024-03-02"
+updatedDate: "2024-04-13"
 category: "event"
 tags: ["リンク集", "Developers Summit"]
 ---
@@ -51,6 +51,10 @@ X アカウントについては、多くの方はデブサミ公式サイトの
     - 「技術書」の読書術 達人が教える選び方・読み方・情報発信＆共有のコツとテクニック
   - 16-B-6 探索型のプロダクト開発を始めよう～正しいものを正しくつくる2.0～
   - 16-E-7 良いプロダクト作りのための組織育成（理論＆実践編） 健全なコードは健全な組織、健全なチームから
+
+2024/04/13
+- スライド・本人記事追加
+  - 15-D-3 『グランブルーファンタジー』100万行を超える大規模なシステム再構築～10周年のその先へ～
 
 ## 2024/02/15(木)
 ### 15-A-1 エンジニアのための、生成AIとの付き合い方
@@ -113,6 +117,11 @@ X アカウントについては、多くの方はデブサミ公式サイトの
 - 登壇者：
   - 伊藤 顕二郎[Cygames]
   - 穴久保 拓磨[Cygames]
+
+<OG url="https://speakerdeck.com/cygames/guranburuhuantazi-100mo-xing-wochao-eruda-gui-mo-nasisutemuzai-gou-zhu-10zhou-nian-nosonoxian-he" />
+
+本人記事
+<OG url="https://tech.cygames.co.jp/archives/3614/" />
 
 ### 15-E-3 サービスの危機に立ち向かうリーダーシップ～インシデントコマンダーの役割と戦略～
 - 登壇者：草間 一人(jacopen)[PagerDuty]　[@jacopen](https://twitter.com/jacopen)
