post fix: web1week記事でCrieitがサービスクローズしたことを追記し、リンクを除去(#188)

--- a/src/content/posts/2020/2020-05-28-web1week-like.mdx
+++ b/src/content/posts/2020/2020-05-28-web1week-like.mdx
@@ -2,7 +2,7 @@
 title: "ハッカソンイベントで、React Konva製のジグソーパズルっぽいパズルを作ってみた"
 description: "1週間でWebサービスを作るweb1week（お題「Like」）に参加したので、使用した技術やどんな感じでやっていたのか、やってみてどうだったかのレポート"
 pubDate: "2020-05-28"
-updatedDate: "2020-05-28"
+updatedDate: "2024-09-14"
 category: "event"
 tags: ["JavaScript", "React", "web1week"]
 ---
@@ -18,7 +18,8 @@ import OG from "@/components/OG.astro"
 ### web1week って？
 簡単に言うと「1週間でお題に沿ったWebサービスを作ってみよう」というイベントです。
 プログラマー、クリエイターが記事投稿や議論ができるコミュニティ、Crieit の運営者である、だらさん主催で行われました。
-<OG url="https://crieit.net/dashboard" />
+
+※2024/09/14追記：Crieit はサービスクローズされました。
 
 <blockquote class="twitter-tweet">
   <p lang="ja" dir="ltr">5/18～5/24の1週間でWebサービスを作るイベントです！　Hello worldレベルのサービスでもOKですのでぜひご参加をお願いします！
@@ -55,7 +56,6 @@ PC向け。スマホ対応は現状してません。
 <ImageWrapper className="w-[80%]" src="gifs/2020/web1week-like/puzzle-overview.gif" alt="パズルのプレイ画面GIF" />
 
 ### なんでパズル？
-<OG url="https://crieit.net/boards/web1week-202005/41152da9fccdaae73e45967feced2e2a" />
 イベントボードへの投稿にも書いていたので引用します。
 
 > 「Like」ということで
