--- a/src/content/posts/2020/2020-09-20-web1week-2.mdx
+++ b/src/content/posts/2020/2020-09-20-web1week-2.mdx
@@ -2,7 +2,7 @@
 title: "ハッカソンイベントで、「2」に近い式をあてるゲームを作ってみた"
 description: "1週間でWebサービスを作るweb1week（お題「2」に参加したので、使用した技術やどんな感じでやっていたのか、やってみてどうだったかのレポート"
 pubDate: "2020-09-28"
-updatedDate: "2020-09-28"
+updatedDate: "2024-09-14"
 category: "event"
 tags: ["JavaScript", "React", "web1week"]
 ---
@@ -16,7 +16,9 @@ import OG from "@/components/OG.astro"
 
 ## はじめに
 ### web1week の概要
-「1週間でお題に沿った Web サービスを作ってみよう」というハッカソン的なイベントです。
+Crieit で行われた「1週間でお題に沿った Web サービスを作ってみよう」というハッカソン的なイベントです。
+
+※2024/09/14追記：Crieit はサービスクローズされました。
 
 <blockquote class="twitter-tweet">
   <p lang="ja" dir="ltr">9/7～9/13の1週間でWebサービスを作るイベントです！　Hello worldレベルのサービスでもOKですのでぜひご参加をお願いします！
@@ -44,7 +46,6 @@ import OG from "@/components/OG.astro"
 
 <ImageWrapper className="w-[60%]" src="gifs/2020/web1week-2/close-to-2-overview.gif" alt="ゲームのプレイ画面GIF" />
 
-<OG url="https://crieit.net/boards/web1week-202009/Close-to-2" />
 イベントボードへの投稿から引用。
 > 初級、中級、上級で遊べて、難易度が高いほど長い式になり、30秒で何問正答できるかな？というゲームです。
 > 自分で作っておいてなんですが、暗算得意じゃないと無理ゲーじゃねーかと思いました。
