post fix: 年末振り返り記事でCrieitがサービスクローズしたことを追記し、リンクを除去(#188)

--- a/src/content/posts/2021/2021-12-30-looking-back-2021-tech.mdx
+++ b/src/content/posts/2021/2021-12-30-looking-back-2021-tech.mdx
@@ -2,7 +2,7 @@
 title: "2021年振り返り ～技術活動、ブログ編～"
 description: "2021年のGitのコミット履歴から、記事執筆など技術活動の振り返り"
 pubDate: "2021-12-30"
-updatedDate: "2021-12-30"
+updatedDate: "2024-09-14"
 category: "develop"
 tags: ["振り返り", "ブログ", "TIL"]
 ---
@@ -156,9 +156,8 @@ Next.js の勉強はできたのと、リニューアルする上での移行ラ
 ### ブログ以外の技術記事活動
 <OG url="https://zenn.dev/h_yoshikawa0724" />
 <OG url="https://qiita.com/h-yoshikawa44" />
-<OG url="https://crieit.net/users/h-yoshikawa0724" />
 
-※Zenn および Qiita、Crieit に投稿した記事は、すべて当ブログでも投稿しています。
+※Zenn および Qiita に投稿した記事は、すべて当ブログでも投稿しています。
 
 昨年、Zenn がリリースされてから ブログ + Zenn で活動してきたので、Qiita に新規投稿はしていません。
 ただ、React 関連記事の見直し更新をする際、Qiita に投稿してあった分も更新してあります。
@@ -174,6 +173,8 @@ v4との比較なんかも頑張ったかいがありました。
 Crieit に関しては、今年は web1week に参加しなかったので新規投稿なし。
 web1week の開催自体は知っていて、ネタ集めをした回なんかもありましたが、結局参加まではしませんでした。
 問われる発想力...🙄
+
+※2024/09/14追記：Crieit はサービスクローズされました。
 
 ### 個人開発
 #### OOUI ワークアウト - メモアプリ
