--- a/src/content/posts/2023/2023-12-31-looking-back-2023-tech.mdx
+++ b/src/content/posts/2023/2023-12-31-looking-back-2023-tech.mdx
@@ -131,10 +131,9 @@ GitHub 側の9月より前の活動は重複カウントとみなしてカウン
 ### ブログ以外の記事執筆活動
 <OG url="https://zenn.dev/h_yoshikawa0724" />
 <OG url="https://qiita.com/h-yoshikawa44" />
-<OG url="https://crieit.net/users/h-yoshikawa0724" />
 <OG url="https://note.com/h_yoshikawa44" />
 
-※Zenn および Qiita、Crieit に投稿した記事は、基本的には当ブログでも投稿しています。
+※Zenn および Qiita に投稿した記事は、基本的には当ブログでも投稿しています。
 
 ブログ + Zenn で活動しているのは継続中で、年末振り返り記事以外はクロス投稿していました。
 ただ、ブログリプレースの記事は技術中心の内容になるように少し編集しています。
@@ -148,6 +147,8 @@ GitHub 側の9月より前の活動は重複カウントとみなしてカウン
 やはり文字数は少なめ（昨年は13万文字くらい）
 
 Qiita, Crieit, note は今年活動なしです。
+
+※2024/09/14追記：Crieit はサービスクローズされました。
 
 ### 個人開発
 新規活動は特になし。
