post fix: JSConf JP 2024 の開催日を修正(#190)

--- a/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
+++ b/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
@@ -7,7 +7,7 @@ category: "event"
 tags: ["リンク集", "JSConf JP"]
 ---
 
-2024/11/24(日)で開催された JSConf JP 2024に関する、現時点での公開資料と X アカウントリンクをまとめました。
+2024/11/23(土)で開催された JSConf JP 2024に関する、現時点での公開資料と X アカウントリンクをまとめました。
 よろしければご活用ください。
 
 import OG from "@/components/OG.astro"
