post fix: typo修正(#190)

--- a/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
+++ b/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
@@ -269,7 +269,7 @@ x アカウントについては、以下のように確認できたものを記
 ### C 15:30-16:00 ESLint のカスタムルールで治安維持活動をする
 
 - 登壇社：ミイダス
-  - Nizobuchi
+  - Mizobuchi
 
 <OG url="https://note.com/miidas_tech/n/n362dbdc1ad83" />
 
