post fix: B 15:30-16:00 Modular Monolith Monorepoの本人記事を追加(#190)

--- a/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
+++ b/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
@@ -2,7 +2,7 @@
 title: "JSConf JP 2024 公開資料・Xアカウントリンクまとめ"
 description: "JSConf JP 2024の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2024-11-24"
-updatedDate: "2024-11-24"
+updatedDate: "2024-11-26"
 category: "event"
 tags: ["リンク集", "JSConf JP"]
 ---
@@ -30,6 +30,10 @@ x アカウントについては、以下のように確認できたものを記
 [Zenn 版](https://zenn.dev/yumemi_inc/articles/2024-11-24-jsconf-jp-2024)ではスライド埋め込みをしているので、そちらの方がさっと見やすいかもです。
 
 {/* <!-- textlint-disable --> */}
+
+---
+更新履歴
+2024/11/26...本人記事を追加：B 15:30-16:00 Modular Monolith Monorepo
 
 ## アーカイブ
 
@@ -265,6 +269,9 @@ x アカウントについては、以下のように確認できたものを記
 - 登壇者：坂本結衣[newmo]　[@yui_tang](https://x.com/yui_tang)
 
 <OG url="https://speakerdeck.com/yuisakamoto/modular-monolith-monorepo-sinpurusawobao-tinagaramonoreponomeritutowozui-da-hua-suru" />
+
+本人記事
+<OG url="https://tech.newmo.me/entry/jsconf2024-modular-monolith-monorepo" />
 
 ### C 15:30-16:00 ESLint のカスタムルールで治安維持活動をする
 
