post fix: 登壇者名修正の件も更新履歴に残すようにした(#190)

--- a/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
+++ b/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
@@ -33,7 +33,9 @@ x アカウントについては、以下のように確認できたものを記
 
 ---
 更新履歴
-2024/11/26...本人記事を追加：B 15:30-16:00 Modular Monolith Monorepo
+- 2024/11/26
+  - 登壇者名を修正：C 15:30-16:00 ESLint のカスタムルールで治安維持活動をする
+  - 本人記事を追加：B 15:30-16:00 Modular Monolith Monorepo
 
 ## アーカイブ
 
