--- a/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
+++ b/src/content/posts/2024/2024-11-24-jsconf-jp-2024.mdx
@@ -2,7 +2,7 @@
 title: "JSConf JP 2024 公開資料・Xアカウントリンクまとめ"
 description: "JSConf JP 2024の公開資料、Xアカウントのリンクまとめ"
 pubDate: "2024-11-24"
-updatedDate: "2024-11-26"
+updatedDate: "2024-11-28"
 category: "event"
 tags: ["リンク集", "JSConf JP"]
 ---
@@ -36,6 +36,8 @@ x アカウントについては、以下のように確認できたものを記
 - 2024/11/26
   - 登壇者名を修正：C 15:30-16:00 ESLint のカスタムルールで治安維持活動をする
   - 本人記事を追加：B 15:30-16:00 Modular Monolith Monorepo
+- 2024/11/28
+  - スライドを追加：D 15:30-16:00 クルマのサブスクサービスを Next.js で内製化した経験とその1年後
 
 ## アーカイブ
 
@@ -287,6 +289,8 @@ x アカウントについては、以下のように確認できたものを記
 - 登壇社：KINTOテクノロジーズ
   - N Okawara　[@nori_okwr](https://x.com/nori_okwr)
   - ahomu　[@ahomu](https://x.com/ahomu)
+
+<OG url="https://speakerdeck.com/kintotechdev/kurumanosabusukuwo-next-dot-jsdenei-zhi-hua-sitajing-yan-tosono1nian-hou" />
 
 ### A 16:00-16:30 Moving Three.js from WebGL to WebGPU
 
