post fix: テクニカルライティング本紹介記事で第2版情報を追加(#199)

--- a/src/content/posts/2023/2023-03-25-book-technical-writing-primer.mdx
+++ b/src/content/posts/2023/2023-03-25-book-technical-writing-primer.mdx
@@ -2,7 +2,7 @@
 title: "技術文書を書く方に送る、書籍「技術者のためのテクニカルライティング入門講座」"
 description: "書籍「技術者のためのテクニカルライティング入門講座」と、さらなるテクニカルライティングの世界の紹介"
 pubDate: "2023-03-25"
-updatedDate: "2023-11-25"
+updatedDate: "2024-12-31"
 category: "develop"
 tags: ["テクニカルライティング"]
 ---
@@ -32,6 +32,10 @@ import OG from "@/components/OG.astro"
 
 書籍が発売されたのは2018年11月19日。
 当記事の執筆時点からは約5年前になりますが、今でも十分通用する内容になっていると個人的に思いました。
+
+**※2024/12/31追記**
+2024/12/18に第2版が出版されました！ 主に生成 AI に関する章が増えているようです。
+<OG url="https://www.shoeisha.co.jp/book/detail/9784798188423" />
 
 ### 紹介したいと思った背景
 （私事なので興味ない方はすっ飛ばしてもらって大丈夫です）
